# greshm_app_api

./: Cargo.toml  Readme.md  Rocket.toml  ansible_setup_remote_server.yml  test_script.sh
src/: authorize.rs  main.rs  store.rs
