[package]
name = "greshm_app_api"
version = "0.1.0"
authors = ["Nik Putnam <nputnam@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "*"
rust-crypto = "*"
jsonwebtoken = "*"
serde = "*"
serde_json = "*"
serde_derive="*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
