[package]
name = "greshm_app_api"
version = "0.1.0"
authors = ["Nik Putnam <nputnam@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "*"
rust-crypto = "*"
jsonwebtoken = "*"
serde = "*"
serde_json = "*"
serde_derive="*"
foundationdb = "*"
futures = "0.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rand = "*"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
